mType/tests/testFiles/error/error/invalidStaticVarNameSpecialChar.mt
class TestClass {
    static int count% = 0;
}
